# task-arithmetic

./: .gitignore  README.md  pyproject.toml  research_strategy.md
configs/: colab_overrides.yaml  train_config.yaml
data/processed/: category_assignments.json
data/splits/: cluster_assignments.tsv  split_metadata.json  test_assays.json  train_assays.json
deploy/: QUICKSTART.md  gcp_create_vm.sh  run_training.sh  setup_vm.sh  sync_from_gcs.sh  sync_to_gcs.sh  teardown.sh
notebooks/: colab_training.ipynb
scripts/: 04_zero_shot.py  05_train_property_models.py  06_evaluate.py  07_extract_vectors.py
src/: __init__.py
src/data/: categorize.py  dataset.py  download.py  splits.py
src/evaluation/: evaluate.py
src/models/: baseline.py  esm_lora.py
src/training/: losses.py  trainer.py  utils.py
src/vectors/: extract.py
